base/src/test/resources/failure/struct/arg-num-mismatch.aya.txt
In file $FILE:11:5 ->

   9 | 
  10 | def path {A : I -> Type} (p : Pi (i : I) -> A i)
  11 |   => new Path A (p left) (p right) { | at i j => p i}
            ^----------------------------------------------^

Error: Expected 1 arguments, but found 2 arguments for field at

1 error(s), 0 warning(s).
What are you doing?
